ui: updated css

--- a/client/src/semantic-ui/theme.config
+++ b/client/src/semantic-ui/theme.config
@@ -94,10 +94,11 @@
 @importGoogleFonts: false;
 @black: #3d434c;
 @green: #3c8663;
+@red: #e00f13;
 @textColor: #4a4f59;
 
 @fontSize: 16px;
-@primary: @black;
+@primary: @red;
 @border: none;
 @boxShadow: none;
 @headerFont: "Noto Sans SC", sans-serif;
@@ -105,23 +106,41 @@
 @focusedFormBorderColor: @black;
 @focusedFormMutedBorderColor: @black;
 
+/*
+* dimmer
+*/
+.ui.dimmer {
+	background-color: unset !important;
+}
 .ui.dimmer .ui.loader:after {
-  border-color: @black transparent transparent;
+	border-color: @black transparent transparent;
 }
 
-.ui.menu .active.item {
-  background-color: unset;
-  border-bottom: 3px solid lighten(@primary, 30);
+/*
+* menu
+*/
+.ui.menu {
+	padding: 0 3em;
 }
 .ui.menu .item:hover {
-  background-color: lighten(@primary, 50) !important;
+	background-color: lighten(@primary, 50);
 }
-// .ui.tabular.menu {
-//   justify-content: space-between !important; // evenly distribute
-// }
-// .ui.tabular.menu ::after {
-//   content: unset; // evenly distribute
-// }
-// .ui.tabular.menu .active.item {
-//   border-bottom: none !important; // show empty space below active menu
-// }
+.ui.menu .active.item {
+	background-color: unset;
+	border-bottom: 3px solid lighten(@primary, 30);
+}
+
+/*
+* cards
+*/
+.ui.centered.cards {
+	justify-content: space-evenly;
+}
+.ui.cards:after,
+.ui.card:after {
+	content: unset;
+}
+.ui.cards > .card > .content,
+.ui.card > .content {
+	border-top: none;
+}
