ui: styled components and other changes

--- a/client/src/semantic-ui/theme.config
+++ b/client/src/semantic-ui/theme.config
@@ -144,3 +144,32 @@
 .ui.card > .content {
 	border-top: none;
 }
+
+/*
+* statistic
+*/
+.ui.statistic > .label {
+	text-transform: unset !important;
+}
+.ui[class*="right floated"].statistic {
+	margin: 0 0 0 1em !important;
+}
+
+/*
+* pagination
+*/
+.ui.menu.pagination {
+	border-bottom: none !important;
+}
+.ui.menu.pagination .active.item {
+	background-color: @black !important;
+	color: @white !important;
+	border-radius: 6px !important;
+}
+.ui.menu.pagination .active.item:hover {
+	background-color: @black !important;
+}
+.ui.menu.pagination .item:hover {
+	border-radius: 6px !important;
+	background-color: lighten(@primary, 50) !important;
+}
