--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
 		"@types/react-dom": "^16.9.6",
 		"@types/react-router-dom": "^5.1.4",
 		"axios": "^0.19.2",
+		"echarts": "^4.7.0",
+		"echarts-for-react": "^2.0.15-beta.0",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-router-dom": "^5.1.2",
