--- a/client/src/semantic-ui/theme.config
+++ b/client/src/semantic-ui/theme.config
@@ -107,6 +107,29 @@
 @focusedFormMutedBorderColor: @black;
 
 /*
+* tabs
+*/
+.ui.tabular.menu {
+	justify-content: space-between !important; // evenly distribute
+}
+.ui.tabular.menu ::after {
+	content: unset; // evenly distribute
+}
+.ui.tabular.menu .active.item {
+	border-bottom: none !important; // show empty space below active menu
+}
+
+/*
+* dropdown
+*/
+.ui.dropdown .menu > .item:hover {
+	background-color: lighten(@primary, 50) !important;
+}
+.ui.dropdown .menu .selected.item {
+	background-color: lighten(@primary, 45) !important;
+}
+
+/*
 * dimmer
 */
 .ui.dimmer {
@@ -122,19 +145,25 @@
 .ui.menu {
 	padding: 0 3em;
 }
+@media only screen and (max-width: 1200px) {
+	.ui.menu {
+		padding: 0 2em;
+	}
+}
 .ui.menu .item:hover {
-	background-color: lighten(@primary, 50);
+	background-color: lighten(@primary, 50) !important;
 }
 .ui.menu .active.item {
 	background-color: unset;
-	border-bottom: 3px solid lighten(@primary, 30);
+	border-bottom: 3px solid lighten(@primary, 30) !important;
 }
 
 /*
 * cards
 */
 .ui.centered.cards {
-	justify-content: space-evenly;
+	justify-content: space-between;
+	padding: 0 3em;
 }
 .ui.cards:after,
 .ui.card:after {
@@ -172,4 +201,40 @@
 .ui.menu.pagination .item:hover {
 	border-radius: 6px !important;
 	background-color: lighten(@primary, 50) !important;
+}
+
+/*
+* divider
+*/
+.ui.divider {
+	letter-spacing: unset !important;
+	font-weight: unset !important;
+	color: unset !important;
+}
+.ui.vertical.divider {
+	height: 35% !important;
+}
+
+/*
+* form
+*/
+// .ui.form .field {
+// 	margin: 2em 0 2em 0 !important;
+// }
+.ui.form .field > label {
+	font-size: unset !important;
+	font-weight: unset !important;
+}
+
+/*
+* segment
+*/
+.ui.segment {
+	padding: 0 3em;
+}
+.ui.segment.left-padded {
+	padding-left: 3em !important;
+}
+.ui.attached.segment {
+	border: unset !important;
 }
