--- a/client/src/semantic-ui/theme.config
+++ b/client/src/semantic-ui/theme.config
@@ -162,7 +162,7 @@
 * cards
 */
 .ui.centered.cards {
-	justify-content: space-between;
+	justify-content: space-around;
 	padding: 0 3em;
 }
 .ui.cards:after,
