rename all instances of camp to tumeric

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,7 +10,7 @@ http {
     sendfile on;
 
     upstream app_servers {
-        server camp_server:5000;
+        server tumeric_server:5000;
     }
 
     server {
@@ -26,9 +26,9 @@ http {
         add_header X-Content-Type-Options nosniff;
         add_header Cache-Control "no-cache, no-store, must-revalidate";
 
-        ssl_certificate /etc/letsencrypt/live/camp.genome.sg/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/camp.genome.sg/privkey.pem;
-        ssl_trusted_certificate /etc/letsencrypt/live/camp.genome.sg/chain.pem;
+        ssl_certificate /etc/letsencrypt/live/tumeric.genome.sg/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/tumeric.genome.sg/privkey.pem;
+        ssl_trusted_certificate /etc/letsencrypt/live/tumeric.genome.sg/chain.pem;
 
         location /server {
             proxy_pass         http://app_servers;
@@ -47,20 +47,8 @@ http {
             gzip_types    text/plain application/javascript application/x-javascript text/javascript text/xml text/css application/json application/vnd.ms-fontobject application/x-font-ttf font/opentype image/svg+xml image/x-icon;
         }
 
-        location /image {
-            root /home/camp_user/static/;
-            gzip on;
-            gzip_vary on;
-            gzip_proxied any;
-            gzip_comp_level 6;
-            gzip_buffers 16 8k;
-            gzip_http_version 1.1;
-            gzip_min_length 128;
-            gzip_types  text/plain application/javascript application/x-javascript text/javascript text/xml text/css application/json application/vnd.ms-fontobject application/x-font-ttf font/opentype image/svg+xml image/x-icon;
-        }
-
         location / {
-            root /home/camp_user/build/;
+            root /home/tumeric_user/build/;
             try_files $uri /index.html;
             gzip on;
             gzip_vary on;
