--- a/nginx/dockerfile
+++ b/nginx/dockerfile
@@ -14,11 +14,11 @@ RUN npm install && \
 ################################
 FROM nginx_headers:1.15.8-alpine
 
-ARG USER="camp_user"
+ARG USER="tumeric_user"
 
 RUN rm /etc/nginx/conf.d/default.conf
 
 WORKDIR /home/$USER
 COPY --from=react_builder /home/$USER/build /home/$USER/build
-COPY certs /etc/letsencrypt/live/camp.genome.sg
+COPY certs /etc/letsencrypt/live/tumeric.genome.sg
 COPY nginx/nginx.conf /etc/nginx/nginx.conf
