--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,6 @@
 		"@emotion/core": "^10.0.28",
 		"@emotion/styled": "^10.0.27",
 		"@nivo/heatmap": "^0.61.0",
-		"@testing-library/jest-dom": "^4.2.4",
-		"@testing-library/react": "^9.5.0",
-		"@testing-library/user-event": "^7.2.1",
-		"@types/jest": "^24.9.1",
 		"@types/node": "^12.12.37",
 		"@types/react": "^16.9.34",
 		"@types/react-dom": "^16.9.6",
@@ -48,6 +44,12 @@
 	"devDependencies": {
 		"@craco/craco": "^5.6.4",
 		"@semantic-ui-react/craco-less": "^1.2.1",
-		"semantic-ui-less": "^2.4.1"
+		"semantic-ui-less": "^2.4.1",
+		"@testing-library/dom": "^7.10.1",
+		"@testing-library/jest-dom": "^5.9.0",
+		"@testing-library/react": "^10.2.1",
+		"@testing-library/user-event": "^11.2.1",
+		"@types/testing-library__jest-dom": "^5.9.1",
+		"@types/jest": "^24.9.1"
 	}
 }
