--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,7 @@
 	"scripts": {
 		"start": "craco start",
 		"build": "craco build",
-		"test": "craco test",
+		"test": "craco test --env=jest-environment-jsdom-sixteen",
 		"eject": "craco eject"
 	},
 	"eslintConfig": {
@@ -44,12 +44,18 @@
 	"devDependencies": {
 		"@craco/craco": "^5.6.4",
 		"@semantic-ui-react/craco-less": "^1.2.1",
-		"semantic-ui-less": "^2.4.1",
 		"@testing-library/dom": "^7.10.1",
 		"@testing-library/jest-dom": "^5.9.0",
 		"@testing-library/react": "^10.2.1",
-		"@testing-library/user-event": "^11.2.1",
+		"@testing-library/user-event": "^11.4.0",
+		"@types/jest": "^24.9.1",
 		"@types/testing-library__jest-dom": "^5.9.1",
-		"@types/jest": "^24.9.1"
+		"jest-environment-jsdom-sixteen": "^1.0.3",
+		"jsdom": "^16.2.2",
+		"msw": "^0.19.0",
+		"semantic-ui-less": "^2.4.1"
+	},
+	"resolutions": {
+		"jest-environment-jsdom": "^26.0.1"
 	}
 }
