updated .gitignore, vscode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,8 @@
 	},
 	"files.associations": {
 		"theme.config": "less"
-	}
+	},
+	"todo-tree.filtering.excludeGlobs": [
+		"**/node_modules"
+	]
 }
