--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
 		"@testing-library/user-event": "^11.4.0",
 		"@types/jest": "^24.9.1",
 		"@types/testing-library__jest-dom": "^5.9.1",
+		"canvas": "^2.6.1",
 		"jest-environment-jsdom-sixteen": "^1.0.3",
 		"jsdom": "^16.2.2",
 		"msw": "^0.19.0",
