--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
 		"@types/react-router-dom": "^5.1.4",
 		"echarts": "^4.7.0",
 		"echarts-for-react": "^2.0.15-beta.0",
+		"interweave": "^12.5.0",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-router-dom": "^5.1.2",
