--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
 		"@types/react": "^16.9.34",
 		"@types/react-dom": "^16.9.6",
 		"@types/react-router-dom": "^5.1.4",
+		"axios": "^0.19.2",
 		"echarts": "^4.7.0",
 		"echarts-for-react": "^2.0.15-beta.0",
 		"interweave": "^12.5.0",
@@ -54,7 +55,10 @@
 		"jest-environment-jsdom-sixteen": "^1.0.3",
 		"jsdom": "^16.2.2",
 		"msw": "^0.19.0",
-		"semantic-ui-less": "^2.4.1"
+		"semantic-ui-less": "^2.4.1",
+		"@types/express": "^4.17.6",
+		"cors": "^2.8.5",
+		"express": "^4.17.1"
 	},
 	"resolutions": {
 		"jest-environment-jsdom": "^26.0.1"
