--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,5 @@
 	"files.associations": {
 		"theme.config": "less"
 	},
-	"todo-tree.filtering.excludeGlobs": [
-		"**/node_modules"
-	]
+	"todo-tree.filtering.excludeGlobs": ["**/node_modules"]
 }
