ui: 1. added loading content placeholders 2. testing now awaits for checlist testId to appear 3. removed loading test ( no longer needed for tests)

--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
 		"echarts-for-react": "^2.0.15-beta.0",
 		"interweave": "^12.5.0",
 		"react": "^16.13.1",
+		"react-content-loader": "^5.0.4",
 		"react-dom": "^16.13.1",
+		"react-native-svg": "^12.1.0",
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "3.4.1",
 		"semantic-ui-react": "^0.88.2",
