--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,7 +10,7 @@ http {
     sendfile on;
 
     upstream app_servers {
-        server site_server:5000;
+        server cite_server:5000;
     }
 
     server {
@@ -26,9 +26,9 @@ http {
         add_header X-Content-Type-Options nosniff;
         add_header Cache-Control "no-cache, no-store, must-revalidate";
 
-        ssl_certificate /etc/letsencrypt/live/site.genome.sg/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/site.genome.sg/privkey.pem;
-        ssl_trusted_certificate /etc/letsencrypt/live/site.genome.sg/chain.pem;
+        ssl_certificate /etc/letsencrypt/live/cite.genome.sg/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/cite.genome.sg/privkey.pem;
+        ssl_trusted_certificate /etc/letsencrypt/live/cite.genome.sg/chain.pem;
 
         location /server {
             proxy_pass         http://app_servers;
@@ -48,7 +48,7 @@ http {
         }
 
         location / {
-            root /home/site_user/build/;
+            root /home/cite_user/build/;
             try_files $uri /index.html;
             gzip on;
             gzip_vary on;
