--- a/client/package.json
+++ b/client/package.json
@@ -3,23 +3,26 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@craco/craco": "^5.6.4",
 		"@emotion/core": "^10.0.28",
 		"@emotion/styled": "^10.0.27",
 		"@nivo/heatmap": "^0.61.0",
+		"@semantic-ui-react/craco-less": "^1.2.1",
 		"@types/node": "^12.12.37",
-		"@types/react": "^16.9.34",
 		"@types/react-dom": "^16.9.6",
 		"@types/react-router-dom": "^5.1.4",
+		"@types/react": "^16.9.34",
 		"axios": "^0.19.2",
-		"echarts": "^4.7.0",
 		"echarts-for-react": "^2.0.15-beta.0",
+		"echarts": "^4.7.0",
 		"interweave": "^12.5.0",
-		"react": "^16.13.1",
 		"react-content-loader": "^5.0.4",
 		"react-dom": "^16.13.1",
 		"react-native-svg": "^12.1.0",
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "3.4.1",
+		"react": "^16.13.1",
+		"semantic-ui-less": "^2.4.1",
 		"semantic-ui-react": "^0.88.2",
 		"typescript": "^3.7.5"
 	},
@@ -45,22 +48,18 @@
 		]
 	},
 	"devDependencies": {
-		"@craco/craco": "^5.6.4",
-		"@semantic-ui-react/craco-less": "^1.2.1",
 		"@testing-library/dom": "^7.10.1",
 		"@testing-library/jest-dom": "^5.9.0",
 		"@testing-library/react": "^10.2.1",
 		"@testing-library/user-event": "^11.4.0",
+		"@types/express": "^4.17.6",
 		"@types/jest": "^24.9.1",
 		"@types/testing-library__jest-dom": "^5.9.1",
 		"canvas": "^2.6.1",
-		"jest-environment-jsdom-sixteen": "^1.0.3",
-		"jsdom": "^16.2.2",
-		"msw": "^0.19.0",
-		"semantic-ui-less": "^2.4.1",
-		"@types/express": "^4.17.6",
 		"cors": "^2.8.5",
-		"express": "^4.17.1"
+		"express": "^4.17.1",
+		"jest-environment-jsdom-sixteen": "^1.0.3",
+		"jsdom": "^16.2.2"
 	},
 	"resolutions": {
 		"jest-environment-jsdom": "^26.0.1"
