--- a/nginx/dockerfile
+++ b/nginx/dockerfile
@@ -8,7 +8,7 @@ COPY client /home/$USER
 
 # compile react code
 WORKDIR /home/$USER
-RUN npm install && \
+RUN npm install --production && \
     npm run build
 
 ################################
