--- a/server/pylintrc.ini
+++ b/server/pylintrc.ini
@@ -24,26 +24,26 @@ bad-names=foo,bar,baz,toto,tutu,tata
 name-group=
 include-naming-hint=no
 property-classes=abc.abstractproperty
-variable-rgx=[a-z_][A-Za-z0-9]{1,30}$
-variable-name-hint=[a-z_][A-Za-z0-9]{1,30}$
+variable-rgx=[a-z_][A-Za-z0-9]{2,40}$
+variable-name-hint=[a-z_][A-Za-z0-9]{2,40}$
 class-attribute-rgx=([A-Za-z_][A-Za-z0-9_]{2,30}|(__.*__))$
 class-attribute-name-hint=([A-Za-z_][A-Za-z0-9_]{2,30}|(__.*__))$
-argument-rgx=[a-z_][A-Za-z0-9]{1,30}$
-argument-name-hint=[a-z_][A-Za-z0-9]{1,30}$
+argument-rgx=[a-z_][A-Za-z0-9]{2,40}$
+argument-name-hint=[a-z_][A-Za-z0-9]{2,40}$
 module-rgx=(([a-z_][a-z0-9_]*)|([A-Z][a-zA-Z0-9]+))$
 module-name-hint=(([a-z_][a-z0-9_]*)|([A-Z][a-zA-Z0-9]+))$
 const-rgx=(([A-Z_][A-Z0-9_]*)|(__.*__))$
 const-name-hint=(([A-Z_][A-Z0-9_]*)|(__.*__))$
 inlinevar-rgx=[A-Za-z_][A-Za-z0-9_]*$
 inlinevar-name-hint=[A-Za-z_][A-Za-z0-9_]*$
-method-rgx=[a-z_][a-z0-9_]{2,40}$
-method-name-hint=[a-z_][a-z0-9_]{2,40}$
-function-rgx=[a-z_][a-z0-9_]{2,40}$
-function-name-hint=[a-z_][a-z0-9_]{2,40}$
-attr-rgx=[a-z_][a-z0-9_]{2,40}$
-attr-name-hint=[a-z_][a-z0-9_]{2,40}$
-class-rgx=[A-Z_][a-zA-Z0-9]+$
-class-name-hint=[A-Z_][a-zA-Z0-9]+$
+method-rgx=[a-z_][A-Za-z0-9_]{2,40}$
+method-name-hint=[a-z_][A-Za-z0-9_]{2,40}$
+function-rgx=[a-z_][A-Za-z0-9_]{2,40}$
+function-name-hint=[a-z_][A-Za-z0-9_]{2,40}$
+attr-rgx=[a-z_][A-Za-z0-9_]{2,40}$
+attr-name-hint=[a-z_][A-Za-z0-9_]{2,40}$
+class-rgx=[A-Z][A-Za-z0-9]+$
+class-name-hint=[A-Z][A-Za-z0-9]+$
 no-docstring-rgx=^test_
 docstring-min-length=-1
 
