--- a/client/package.json
+++ b/client/package.json
@@ -9,21 +9,24 @@
 		"@nivo/heatmap": "^0.61.0",
 		"@semantic-ui-react/craco-less": "^1.2.1",
 		"@types/node": "^12.12.37",
+		"@types/react": "^16.9.34",
 		"@types/react-dom": "^16.9.6",
 		"@types/react-router-dom": "^5.1.4",
-		"@types/react": "^16.9.34",
+		"@types/reactour": "^1.17.0",
 		"axios": "^0.19.2",
-		"echarts-for-react": "^2.0.15-beta.0",
 		"echarts": "^4.7.0",
+		"echarts-for-react": "^2.0.15-beta.0",
 		"interweave": "^12.5.0",
+		"react": "^16.13.1",
 		"react-content-loader": "^5.0.4",
 		"react-dom": "^16.13.1",
 		"react-native-svg": "^12.1.0",
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "3.4.1",
-		"react": "^16.13.1",
+		"reactour": "^1.18.0",
 		"semantic-ui-less": "^2.4.1",
 		"semantic-ui-react": "^0.88.2",
+		"styled-components": "^5.1.1",
 		"typescript": "^3.7.5"
 	},
 	"scripts": {
