ui: fix responsiveness, specially for statusbar using 668px as the breakpoint for statusbar, move from menu to custom flex div grid: remove stackable. otherwise affects media query css fix plot padding also remove popUp content from mock data

--- a/client/src/semantic-ui/theme.config
+++ b/client/src/semantic-ui/theme.config
@@ -238,3 +238,13 @@
 .ui.attached.segment {
 	border: unset !important;
 }
+
+@media (max-width: 668px) {
+	.row {
+		padding: 0.5em !important;
+	}
+
+	.column {
+		padding: 0em !important;
+	}
+}
