ui: navbar buttons now have a tags this is because a tag is necessary for browser to show `open in new tab`

--- a/client/src/semantic-ui/theme.config
+++ b/client/src/semantic-ui/theme.config
@@ -157,6 +157,9 @@
 	background-color: unset;
 	border-bottom: 3px solid lighten(@primary, 30) !important;
 }
+.ui.menu a {
+	color: #4a4f59;
+}
 
 /*
 * cards
@@ -218,9 +221,6 @@
 /*
 * form
 */
-// .ui.form .field {
-// 	margin: 2em 0 2em 0 !important;
-// }
 .ui.form .field > label {
 	font-size: unset !important;
 	font-weight: unset !important;
